Improving the structure of the application layer (WIP). Adding functionality to the web front end (WIP).
