# Northwind.Application/Customers/Commands/CreateCustomer/CreateCustomerCommandHandler.cs
@@ -1,15 +1,13 @@
 ﻿using System.Threading;
 using System.Threading.Tasks;
 using MediatR;
-using Northwind.Application.Customers.Models;
 using Northwind.Application.Interfaces;
-using Northwind.Application.Notifications.Models;
 using Northwind.Domain.Entities;
 using Northwind.Persistence;
 
-namespace Northwind.Application.Customers.Commands
+namespace Northwind.Application.Customers.Commands.CreateCustomer
 {
-    public class CreateCustomerCommandHandler : IRequestHandler<CreateCustomerCommand, CustomerDetailModel>
+    public class CreateCustomerCommandHandler : IRequestHandler<CreateCustomerCommand, Unit>
     {
         private readonly NorthwindDbContext _context;
         private readonly INotificationService _notificationService;
@@ -22,7 +20,7 @@ namespace Northwind.Application.Customers.Commands
             _notificationService = notificationService;
         }
 
-        public async Task<CustomerDetailModel> Handle(CreateCustomerCommand request, CancellationToken cancellationToken)
+        public async Task<Unit> Handle(CreateCustomerCommand request, CancellationToken cancellationToken)
         {
             var entity = new Customer
             {
@@ -42,16 +40,7 @@ namespace Northwind.Application.Customers.Commands
 
             await _context.SaveChangesAsync(cancellationToken);
 
-            _notificationService.Send(new Message
-            {
-                From = "jasontaylor@ssw.com.au",
-                To = "jasontaylor@ssw.com.au",
-                Subject = "MediatR - Events",
-                Body = "Remember to update the create customer command" +
-                       "handler demo to use a MediatR event."
-            });
-
-            return CustomerDetailModel.Create(entity);
+            return Unit.Value;
         }
     }
 }
