# Northwind.Application/Customers/Queries/GetCustomerDetail/GetCustomerDetailQueryValidator.cs
@@ -1,0 +1,12 @@
+﻿using FluentValidation;
+
+namespace Northwind.Application.Customers.Queries.GetCustomerDetail
+{
+    public class GetCustomerDetailQueryValidator : AbstractValidator<GetCustomerDetailQuery>
+    {
+        public GetCustomerDetailQueryValidator()
+        {
+            RuleFor(v => v.Id).NotEmpty().Length(5);
+        }
+    }
+}
